Simplify resultsController; remove resultsService; modularize onSuccess

--- a/window/templates/results.html
+++ b/window/templates/results.html
@@ -5,7 +5,7 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th>Reuqest URL</th>
+                    <th>Request URL</th>
                     <th>Status</th>
                     <th>Text</th>
                 </tr>
