Rename results to request; add url webview for GET;

--- a/window/templates/requests.html
+++ b/window/templates/requests.html
@@ -14,7 +14,7 @@
             <tbody>
                 <tr ng-repeat="request in requestList track by $index">
                     <td>{{ request.method }}</td>
-                    <td>{{ request.url }}</td>
+                    <td><a ng-click="viewRequest(request.url)">{{ request.url }}</a></td>
                     <td>{{ request.status }}</td>
                     <td>{{ request.text }}</td>
                 </tr>
