--- a/window/templates/main.html
+++ b/window/templates/main.html
@@ -24,12 +24,16 @@
                 <tr>
                     <th>Parameter</th>
                     <th>Value</th>
+                    <th>Action</th>
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="param in paramList">
+                <tr ng-repeat="param in paramList track by $index">
                     <td>{{ param.key }}</td>
                     <td><input type="text" ng-model="param.value" class="form-control" /></td>
+                    <td>
+                        <a ng-click="removeItem(paramList, $index)">Remove</a>
+                    </td>
                 </tr>
             </tbody>
         </table>
@@ -57,7 +61,7 @@
                         {{ request.url }}
                     </td>
                     <td>
-                        <a ng-click="removeRequest($index)">Remove</a>
+                        <a ng-click="removeItem(urlList, $index)">Remove</a>
                     </td>
                 </tr>
             </tbody>
