Fix table fortmatting

--- a/window/templates/main.html
+++ b/window/templates/main.html
@@ -22,9 +22,9 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th>Parameter</th>
-                    <th>Value</th>
-                    <th>Action</th>
+                    <th class="col-xs-2">Parameter</th>
+                    <th class="col-xs-8">Value</th>
+                    <th class="col-xs-2">Action</th>
                 </tr>
             </thead>
             <tbody>
@@ -47,9 +47,9 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th>Method</th>
-                    <th>URL</th>
-                    <th>Action</th>
+                    <th class="col-xs-2">Method</th>
+                    <th class="col-xs-8">URL</th>
+                    <th class="col-xs-2">Action</th>
                 </tr>
             </thead>
             <tbody>
