--- a/window/style/style.css
+++ b/window/style/style.css
@@ -1,3 +1,17 @@
 html {
   overflow-y:scroll;
 }
+.table {
+	table-layout:fixed;
+}
+
+.table td {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
+}
+
+.container {
+    width: 1500px;
+}
