Allow url to be added to batch without parameters

--- a/window/templates/main.html
+++ b/window/templates/main.html
@@ -39,7 +39,7 @@
         </table>
 
         <button type="button" class="btn btn-default" ng-click="addToList(paramList)">Add URL</button>
-        <button type="button" class="btn btn-default" ng-click="addParameter()">Add New Parameter</button>
+        <button type="button" class="btn btn-default" ng-click="addParameter(paramList)">Add New Parameter</button>
     </div>
 
     <div>
