--- a/window/templates/main.html
+++ b/window/templates/main.html
@@ -4,39 +4,49 @@
 
     <div class="input-group">
         <p>Enter the URL you wish to Fuzz</p>
-        <div class="form-group">
-        <label for="sel1">Select list:</label>
-        <select class="form-control" ng-model="method">
-            <option>GET</option>
-            <option>POST</option>
-            <option>DELETE</option>
-            <option>PATCH</option>
-        </select>
-        </div>
         <input type="text" class="form-control" placeholder="URL to Fuzz" ng-model="urlInput" />
         <button type="button" class="btn btn-default navbar-btn" ng-click="getParamsFromUrl(urlInput)">Get Params</button>
     </div>
 
     <div>
-        <h3>Parameters to Fuzz [{{ method }}]</h3>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th class="col-xs-2">Parameter</th>
-                    <th class="col-xs-8">Value</th>
-                    <th class="col-xs-2">Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="param in paramList track by $index">
-                    <td><input type="text" ng-model="param.key" class="form-control" /></td>
-                    <td><input type="text" ng-model="param.value" class="form-control" /></td>
-                    <td>
-                        <a ng-click="removeItem(paramList, $index)">Remove</a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <h3>Build Request [{{ defaultMethod }}]</h3>
+        <div class="row">
+            <div class="col-sm-2">
+                <select class="form-control" ng-model="defaultMethod">
+                    <option ng-selected= "{{method == defaultMethod}}" ng-repeat="method in methods" 
+                      value="{{method}}">{{method}}     
+                    </option>
+                </select>
+            </div>
+        </div>
+        
+
+        <div class="form-group" ng-if="defaultMethod == 'GET'">
+            <h3>GET Parameters</h3>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th class="col-xs-2">Parameter</th>
+                        <th class="col-xs-8">Value</th>
+                        <th class="col-xs-2">Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="param in paramList track by $index">
+                        <td><input type="text" ng-model="param.key" class="form-control" /></td>
+                        <td><input type="text" ng-model="param.value" class="form-control" /></td>
+                        <td>
+                            <a ng-click="removeItem(paramList, $index)">Remove</a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div class="form-group" ng-if="defaultMethod == 'POST'">
+            <h3>POST Body</h3>
+            <textarea class="form-control" rows="5" id="comment"></textarea>
+        </div>
 
         <button type="button" class="btn btn-default" ng-click="addToList(paramList)">Add URL</button>
         <button type="button" class="btn btn-default" ng-click="addParameter(paramList)">Add New Parameter</button>
