--- a/window/templates/main.html
+++ b/window/templates/main.html
@@ -9,19 +9,19 @@
     </div>
 
     <div>
-        <h3>Build Request [{{ defaultMethod }}]</h3>
+        <h3>Build Request [{{ method }}]</h3>
         <div class="row">
             <div class="col-sm-2">
-                <select class="form-control" ng-model="defaultMethod">
-                    <option ng-selected= "{{method == defaultMethod}}" ng-repeat="method in methods" 
-                      value="{{method}}">{{method}}     
+                <select class="form-control" ng-model="method">
+                    <option ng-selected= "{{methodType == method}}" ng-repeat="methodType in methods" 
+                      value="{{methodType}}">{{methodType}}     
                     </option>
                 </select>
             </div>
         </div>
         
 
-        <div class="form-group" ng-if="defaultMethod == 'GET'">
+        <div class="form-group" ng-if="method == 'GET'">
             <h3>GET Parameters</h3>
             <table class="table">
                 <thead>
@@ -43,7 +43,7 @@
             </table>
         </div>
 
-        <div class="form-group" ng-if="defaultMethod == 'POST'">
+        <div class="form-group" ng-if="method == 'POST'">
             <h3>POST Body</h3>
             <textarea class="form-control" rows="5" id="comment"></textarea>
         </div>
