--- a/window/templates/main.html
+++ b/window/templates/main.html
@@ -45,7 +45,7 @@
 
         <div class="form-group" ng-if="method == 'POST'">
             <h3>POST Body</h3>
-            <textarea class="form-control" rows="5" id="comment"></textarea>
+            <div json-editor model="people" options="options" style="height: 400px;"/>
         </div>
 
         <button type="button" class="btn btn-default" ng-click="addToList(paramList)">Add URL</button>
