--- a/window/templates/main.html
+++ b/window/templates/main.html
@@ -41,15 +41,18 @@
                     </tr>
                 </tbody>
             </table>
+            <button type="button" class="btn btn-primary" ng-click="addGET(paramList, method)">Add GET Request</button>
+            <button type="button" class="btn btn-default" ng-click="addParameter(paramList)">Add New Parameter</button>
         </div>
+
 
         <div class="form-group" ng-if="method == 'POST'">
             <h3>POST Body</h3>
-            <div json-editor model="people" options="options" style="height: 400px;"/>
+            <div json-editor model="postBody" options="options" style="height: 400px;"/>
+            <button type="button" class="btn btn-primary" ng-click="addPOST(postBody, method)">Add POST Request</button>
         </div>
 
-        <button type="button" class="btn btn-default" ng-click="addToList(paramList)">Add URL</button>
-        <button type="button" class="btn btn-default" ng-click="addParameter(paramList)">Add New Parameter</button>
+        
     </div>
 
     <div>
@@ -63,7 +66,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="request in urlList track by $index">
+                <tr ng-repeat="request in urlBatch track by $index">
                     <td>
                         {{ request.method }}
                     </td>
