--- a/window/templates/main.html
+++ b/window/templates/main.html
@@ -41,7 +41,7 @@
                     </tr>
                 </tbody>
             </table>
-            <button type="button" class="btn btn-primary" ng-click="addGET(paramList, method)">Add GET Request</button>
+            <button type="button" class="btn btn-primary" ng-click="addGET(urlInput, paramList, method)">Add GET Request</button>
             <button type="button" class="btn btn-default" ng-click="addParameter(paramList)">Add New Parameter</button>
         </div>
 
@@ -49,7 +49,7 @@
         <div class="form-group" ng-if="method == 'POST'">
             <h3>POST Body</h3>
             <div json-editor model="postBody" options="options" style="height: 400px;"/>
-            <button type="button" class="btn btn-primary" ng-click="addPOST(postBody, method)">Add POST Request</button>
+            <button type="button" class="btn btn-primary" ng-click="addPOST(urlInput, postBody, method)">Add POST Request</button>
         </div>
 
         
@@ -74,7 +74,7 @@
                         {{ request.url }}
                     </td>
                     <td>
-                        <a ng-click="removeItem(urlList, $index)">Remove</a>
+                        <a ng-click="removeItem(urlBatch, $index)">Remove</a>
                     </td>
                 </tr>
             </tbody>
