Add results page; add empty batch

--- a/window/templates/main.html
+++ b/window/templates/main.html
@@ -88,6 +88,7 @@
                 <input id="delay " type="number" class="form-control" step="1000" ng-model="delay" />
             </div>
             <button type="button" class="btn btn-default" ng-click="startFuzzing(delay)">Start Fuzzing</button>
+            <button type="button" class="btn btn-default" ng-click="emptyBatch()">Empty Batch</button>
         </form>
     </section>
 </div>
