--- a/window/templates/result.html
+++ b/window/templates/result.html
@@ -1,8 +1,8 @@
-
-
-<div class="container">
-    <div>
-        <h3>{{ url }}</h3>
-        <webview id="foo" src="{{ url }}" style="width:640px; height:480px; border: 2px solid black;"></webview>
+<div class="jumbotron">
+    <div class="container">
+        <section>
+            <h3>{{ url }}</h3>
+            <h3>{{ response }}</h3>
+        </section>
     </div>
 </div>
