--- a/window/templates/main.html
+++ b/window/templates/main.html
@@ -28,14 +28,23 @@
                 <thead>
                     <tr>
                         <th class="col-xs-2">Parameter</th>
-                        <th class="col-xs-9">Value</th>
+                        <th class="col-xs-8">Value</th>
+                        <th class="col-xs-1">Insert</th>
                         <th class="col-xs-1">Action</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr ng-repeat="param in paramList track by $index">
                         <td><input type="text" ng-model="param.key" class="form-control" /></td>
-                        <td><input type="text" ng-model="param.value" class="form-control" /></td>
+                        <td>
+                            <textarea ng-model="param.value" rows="1" class="form-control" />
+                            <div ng-if="param.expanded">
+                                More stuff here!
+                            </div>
+                        </td>
+                        <td>
+                            <a ng-click="param.expanded = true">Insert Data</a>
+                        </td>
                         <td>
                             <a ng-click="removeItem(paramList, $index)">Remove</a>
                         </td>
@@ -46,13 +55,18 @@
                 <button type="button" class="btn btn-default navbar-btn" ng-click="getParamsFromUrl(urlInput)">Get Params</button>
                 <button type="button" class="btn btn-default" ng-click="addParameter(paramList)">Add Parameter</button>
                 <button type="button" class="btn btn-primary" ng-click="addGET(urlInput, paramList, method)">Add to Batch</button>
+                <button type="button" class="btn btn-primary">Randomize Requests</button>
             </form>
         </div>
 
         <div class="form-group" ng-if="method == 'POST'">
             <h3>POST Body</h3>
-            <div json-editor model="postBody" options="options" style="height: 400px;" />
-            <button type="button" class="btn btn-primary" ng-click="addPOST(urlInput, postBody, method)">Add to Batch</button>
+            <form class="form-inline">
+                <div json-editor model="postBody" options="options" style="height: 400px; padding-bottom:20px;"/>
+                <button type="button" class="btn btn-primary" ng-click="addPOST(urlInput, postBody, method)">Add to Batch</button>
+                <button type="button" class="btn btn-primary">Insert Junk</button>
+                <button type="button" class="btn btn-primary">Randomize Requests</button>
+            </form>
         </div>
 
     </section>
@@ -87,8 +101,8 @@
                 <label for="delay">Delay: </label>
                 <input id="delay " type="number" class="form-control" step="1000" ng-model="delay" />
             </div>
-            <button type="button" class="btn btn-default" ng-click="startFuzzing(delay)">Start Fuzzing</button>
-            <button type="button" class="btn btn-default" ng-click="emptyBatch()">Empty Batch</button>
+            <button type="button" class="btn btn-primary" ng-click="startFuzzing(delay)">Start Fuzzing</button>
+            <button type="button" class="btn btn-danger" ng-click="emptyBatch()">Empty Batch</button>
         </form>
     </section>
 </div>
