Push headers to request

--- a/window/style/scss-style.scss
+++ b/window/style/scss-style.scss
@@ -26,10 +26,12 @@ th {
   margin-bottom: 0px;
 }
 
-.table td {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+.table {
+  td {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 .container {
