Simplify HTTP request

--- a/window/templates/requests.html
+++ b/window/templates/requests.html
@@ -1,8 +1,7 @@
 <!-- TODO: Add more details for request on button press to expand row-->
 <div class="container">
-    <h1>Results</h1>
-    <div>
-        <button type="button" class="btn btn-default" ng-click="retryBatch()">Retry Batch</button>
+    <section>
+        <h3>Results</h3>
         <table class="table">
             <thead>
                 <tr>
@@ -25,5 +24,6 @@
                 </tr>
             </tbody>
         </table>
-    </div>
+        <button type="button" class="btn btn-default" ng-click="retryBatch()">Retry Batch</button>
+    </section>
 </div>
