--- a/window/templates/result.html
+++ b/window/templates/result.html
@@ -11,9 +11,13 @@
                                 <input class="form-control" type="text" ng-model="url" readonly>
                             </div>
                         </div>
+                        <label class="col-md-2 control-label">Headers:</label>
+                        <div class="col-md-10">
+                            <textarea ng-model="header" rows="3" class="form-control" readonly/>
+                        </div>
                         <label class="col-md-2 control-label">Body:</label>
                         <div class="col-md-10">
-                            <textarea ng-model="body" rows="3" class="form-control" ng-model="body" readonly/>
+                            <textarea ng-model="body" rows="3" class="form-control" readonly/>
                         </div>
                     </div>
                 </fieldset>
