--- a/window/templates/result.html
+++ b/window/templates/result.html
@@ -13,7 +13,7 @@
                         </div>
                         <label class="col-md-2 control-label">Headers:</label>
                         <div class="col-md-10">
-                            <textarea ng-model="header" rows="3" class="form-control" readonly/>
+                            <textarea ng-model="headers" rows="3" class="form-control" readonly/>
                         </div>
                         <label class="col-md-2 control-label">Body:</label>
                         <div class="col-md-10">
